--- a/Client/Views/ClassAdmin/TableClass.cshtml
+++ b/Client/Views/ClassAdmin/TableClass.cshtml
@@ -9,11 +9,14 @@
             <thead class="table-dark">
                 <tr>
                     <td>No</td>
-                    <td>Judul</td>
-                    <td>Desc</td>
+                    <td>Class Name</td>
+                    <td>Description</td>
                     <td>TotalChapter</td>
                     <td>Price</td>
                     <td>Rating</td>
+                    <td>Level</td>
+                    <td>Category</td>
+                    <td>Participant</td>
                     <td>Action</td>
                 </tr>
             </thead>
@@ -35,10 +38,7 @@
             </div>
             <div class="modal-body">
                 <form action="" style="position : relative; width: auto; margin : auto;" class="" id="form-class">
-
-                    
                 </form>
-                
             </div>
         </div>
     </div>
