--- a/Client/Views/ClassAdmin/CreateClass.cshtml
+++ b/Client/Views/ClassAdmin/CreateClass.cshtml
@@ -9,10 +9,11 @@
                 <h1>Create Class</h1>
             </center>
         </p>
+        
     </head>
     <body>
         <content>
-            <form class="canvas shadow">
+            <form class="canvas shadow needs-validation" onsubmit="return false" novalidate id="formClass">
 
                 <div class="form-group">
                     <label for="tittle">Tittle Class</label>
@@ -26,7 +27,7 @@
 
                 <div class="form-group">
                     <label for="Desc">Description</label>
-                    <textarea type="text" name="content" class="form-control" id="desc"> </textarea>
+                    <textarea type="text" name="Desc" class="form-control" id="desc"> </textarea>
                 </div>
 
                 <div class="form-group">
@@ -52,7 +53,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" onclick="InsertClass()">Create</button>
+                    <button class="btn btn-primary" type="submit" onclick="InsertClass()">Create</button>
                 </div>
             </form>
         </content>
