--- a/Client/Views/ClassAdmin/CreateClass.cshtml
+++ b/Client/Views/ClassAdmin/CreateClass.cshtml
@@ -16,8 +16,8 @@
             <form class="canvas shadow needs-validation" onsubmit="return false" novalidate id="formClass">
 
                 <div class="form-group">
-                    <label for="tittle">Tittle Class</label>
-                    <input type="text" name="tittle" class="form-control" placeholder="Input Title" id="judul">
+                    <label for="tittleCls">Tittle Class</label>
+                    <input type="text" name="tittleCls" class="form-control" placeholder="Input Title" id="judul">
                 </div>
 
                 <div class="form-group">
