--- a/Client/Views/Shared/_Layout.cshtml
+++ b/Client/Views/Shared/_Layout.cshtml
@@ -32,13 +32,13 @@
                         <li class="nav-item dropdown">
                             <div id="loginLogout">
                                 @*<a class="nav-item nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Account
+                                    Account
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                        <a class="dropdown-item" href="~/dashboard">My Classes</a>
-                                        <a class="dropdown-item" href="~/account">My Account</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">Logout</a>
+                                    <a class="dropdown-item" href="~/dashboard">My Classes</a>
+                                    <a class="dropdown-item" href="~/account">My Account</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="#">Logout</a>
                                     </div>*@
                             </div>
                         </li>
@@ -85,7 +85,7 @@
                                     <small><a href="#" class="text-dark font-italic">Lupa password?</a></small>
                                 </div>
                                 <div class="text-right">
-                                    <small><a href="#registerModal" class="text-dark font-italic" data-target="#registerModal" data-toggle="modal" data-dismiss="modal">Belum memiliki akun?</a></small>
+                                    <small><a href="#registerModal" id="linkRegister" class="text-dark font-italic" data-target="#registerModal" data-toggle="modal" data-dismiss="modal">Belum memiliki akun?</a></small>
                                 </div>
                                 <button type="submit" class="btn btn-primary btn-lg btn-block mt-1 mb-4 font-weight-bold">Register</button>
                             </form>
@@ -95,6 +95,8 @@
             </div>
         </div>
 
+
+        <!-- Form Register Account -->
         <div class="modal fade" id="registerModal">
             <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                 <div class="modal-content">
@@ -106,41 +108,59 @@
                     </div>
                     <div class="modal-body">
                         <div class="container">
-                            <form class="mx-2">
+                            <form class="mx-2 needs-validation" id="formRegisterAccount" onsubmit="return false" novalidate>
                                 <div class="form-row">
                                     <div class="form-group col-md-6">
                                         <label for="inEmail">Email</label>
-                                        <input type="email" class="form-control" id="inEmail" placeholder="Email">
+                                        <input type="email" class="form-control" id="inEmail" placeholder="Email" required>
+                                        <div class="invalid-feedback">
+                                            Mohon Isi Email
+                                        </div>
                                     </div>
                                     <div class="form-group col-md-6">
                                         <label for="inPass">Password</label>
-                                        <input type="password" class="form-control" id="inPass" placeholder="********">
+                                        <input type="password" class="form-control" id="inPass" placeholder="********" required>
+                                        <div class="invalid-feedback">
+                                            Mohon Isi Password
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="form-row">
                                     <div class="form-group col-md-6">
-                                        <label for="inFName">Nama</label>
-                                        <input type="text" class="form-control" id="inFName" placeholder="John">
+                                        <label for="inFName">Nama Depan</label>
+                                        <input type="text" class="form-control" id="inFName" placeholder="" required>
+                                        <div class="invalid-feedback">
+                                            Mohon Isi Nama Depan
+                                        </div>
                                     </div>
                                     <div class="form-group col-md-6">
-                                        <label for="inLName" class="invisible">L</label>
-                                        <input type="text" class="form-control" id="inLName" placeholder="Doe">
+                                        <label for="inLName">Nama Belakang</label>
+                                        <input type="text" class="form-control" id="inLName" placeholder="" required>
+                                        <div class="invalid-feedback">
+                                            Mohon Isi Nama Belakang
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="form-row">
                                     <div class="form-group col-md-6">
-                                        <label for="inGender">Kelamin</label>
-                                        <select class="form-control" id="inGender">
-                                            <option>Male</option>
-                                            <option>Female</option>
+                                        <label for="inGender">Jenis Kelamin</label>
+                                        <select class="form-control" id="inGender" required>
+                                            <option value="0">Male</option>
+                                            <option value="1">Female</option>
                                         </select>
+                                        <div class="invalid-feedback">
+                                            Mohon Isi Jenis Kelamin
+                                        </div>
                                     </div>
                                     <div class="form-group col-md-6 mb-0">
                                         <label for="inBDate">Tanggal Lahir</label>
                                         <div class="form-group">
                                             <div class="datepicker date input-group">
-                                                <input type="text" placeholder="cth: 2012-12-21" class="form-control" id="inBDate">
+                                                <input type="date" placeholder="" class="form-control" id="inBDate" required>
                                                 <span class="input-group-append"></span>
+                                                <div class="invalid-feedback">
+                                                    Mohon Isi Tanggal Lahir
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -148,63 +168,64 @@
                                 <div class="form-row">
                                     <div class="form-group col-md-6">
                                         <label for="inProv">Provinsi</label>
-                                        <select id="inProv" class="form-control">
-                                            <option selected>Choose...</option>
-                                            <option>Ab</option>
-                                            <option>Bc</option>
-                                            <option>Cd</option>
+                                        <select id="inProv" class="form-control" required>
                                         </select>
+                                        <div class="invalid-feedback">
+                                            Mohon Isi Provinsi
+                                        </div>
                                     </div>
                                     <div class="form-group col-md-6">
                                         <label for="inCity">Kota</label>
-                                        <select id="inCity" class="form-control">
-                                            <option selected>Choose...</option>
-                                            <option>Ab</option>
-                                            <option>Bc</option>
-                                            <option>Cd</option>
+                                        <select id="inCity" class="form-control" required>
                                         </select>
+                                        <div class="invalid-feedback">
+                                            Mohon Isi Kota
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="form-row">
                                     <div class="form-group col-md-3">
                                         <label for="inDis">Kecamatan</label>
-                                        <select id="inDis" class="form-control">
-                                            <option selected>Choose...</option>
-                                            <option>Ab</option>
-                                            <option>Bc</option>
-                                            <option>Cd</option>
+                                        <select id="inDis" class="form-control" required>
                                         </select>
+                                        <div class="invalid-feedback">
+                                            Mohon Isi Kecamatan
+                                        </div>
                                     </div>
                                     <div class="form-group col-md-3">
                                         <label for="inSubDis">Kelurahan</label>
-                                        <select id="inSubDis" class="form-control">
-                                            <option selected>Choose...</option>
-                                            <option>Ab</option>
-                                            <option>Bc</option>
-                                            <option>Cd</option>
+                                        <select id="inSubDis" class="form-control" required>
                                         </select>
+                                        <div class="invalid-feedback">
+                                            Mohon Isi Kelurahan
+                                        </div>
                                     </div>
                                     <div class="form-group col-md-6">
                                         <label for="inAddress">Alamat</label>
-                                        <input type="text" class="form-control" id="inAddress">
+                                        <input type="text" class="form-control" id="inAddress" required>
+                                        <div class="invalid-feedback">
+                                            Mohon Isi Alamat
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="form-row">
                                     <div class="form-group col-md-6">
                                         <label for="inMajor">Jurusan</label>
-                                        <input type="text" class="form-control" id="inMajor">
+                                        <input type="text" class="form-control" id="inMajor" required>
+                                        <div class="invalid-feedback">
+                                            Mohon Isi Jurusan
+                                        </div>
                                     </div>
                                     <div class="form-group col-md-6">
                                         <label for="inUniv">Universitas</label>
                                         <select id="inUniv" class="form-control">
-                                            <option selected>Choose...</option>
-                                            <option>Ab</option>
-                                            <option>Bc</option>
-                                            <option>Cd</option>
                                         </select>
+                                        <div class="invalid-feedback">
+                                            Mohon Isi Universitas
+                                        </div>
                                     </div>
                                 </div>
-                                <button type="submit" class="btn btn-primary btn-lg btn-block mt-1 mb-4 font-weight-bold">Login</button>
+                                <button type="submit" id="buttonRegisterAccount" class="btn btn-primary btn-lg btn-block mt-1 mb-4 font-weight-bold">Register</button>
                             </form>
                         </div>
                     </div>
@@ -219,10 +240,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 
+    <!-- Form Validate-->
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"></script>
+
     <!-- Script JS Sweet Alert -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
+
     <script src="~/js/account.js" asp-append-version="true"></script>
 
     @* Class Filter *@
