--- a/Client/Views/Shared/_Layout.cshtml
+++ b/Client/Views/Shared/_Layout.cshtml
@@ -59,6 +59,7 @@
         </div>
     </footer>
 
+    <!-- Login -->
     <div id="navModal">
         <div class="modal fade" id="loginModal">
             <div class="modal-dialog modal-dialog-centered" role="document" style="width: 22rem;">
@@ -71,14 +72,20 @@
                     </div>
                     <div class="modal-body">
                         <div class="container">
-                            <form class="mx-2">
+                            <form class="mx-2 needs-validation" action="/login/auth" method="POST" id="formLoginAccount" novalidate>
                                 <div class="form-group">
                                     <label for="LogEmail">Email</label>
-                                    <input type="email" class="form-control" id="LogEmail" placeholder="example@mail.com">
+                                    <input type="email" name="Email" class="form-control" id="LogEmail" placeholder="" required>
+                                    <div class="invalid-feedback">
+                                        Mohon Isi Email
+                                    </div>
                                 </div>
                                 <div class="form-group mb-3">
                                     <label for="LogPass">Password</label>
-                                    <input type="password" class="form-control" id="LogPass" placeholder="*******">
+                                    <input type="password" name="Password" class="form-control" id="LogPass" placeholder="" required>
+                                    <div class="invalid-feedback">
+                                        Mohon Isi Password
+                                    </div>
                                     <small><a href="#forgotPass1Modal" class="text-dark font-italic" data-target="#forgotPass1Modal" data-toggle="modal" data-dismiss="modal">Lupa password?</a></small>
                                 </div>
                                 <div class="text-right">
@@ -105,15 +112,18 @@
                     </div>
                     <div class="modal-body">
                         <div class="container">
-                            <form class="mx-2">
+                            <form class="mx-2 needs-validation" id="formRegisterAccount" onsubmit="return false" novalidate>
                                 <div class="form-row mb-4">
                                     <div class="form-group col-md-6">
                                         <label for="inEmail">Email</label>
-                                        <input type="email" class="form-control" id="inEmail" placeholder="address@mail.com">
+                                        <input type="email" class="form-control" id="inEmailRegister" placeholder="" required>
+                                        <div class="invalid-feedback">
+                                            Mohon Isi Email
+                                        </div>
                                     </div>
                                     <div class="form-group col-md-6">
                                         <label for="inPass">Password</label>
-                                        <input type="password" class="form-control" id="inPass" placeholder="********" required>
+                                        <input type="password" class="form-control" id="inPass" placeholder="" required>
                                         <div class="invalid-feedback">
                                             Mohon Isi Password
                                         </div>
@@ -122,22 +132,31 @@
                                 <div class="form-row mb-4">
                                     <div class="form-group col-md-3">
                                         <label for="inFName">Nama Depan</label>
-                                        <input type="text" class="form-control" id="inFName" placeholder="John">
+                                        <input type="text" class="form-control" id="inFName" placeholder="" required>
+                                        <div class="invalid-feedback">
+                                            Mohon Isi Nama Depan
+                                        </div>
                                     </div>
                                     <div class="form-group col-md-3">
                                         <label for="inLName" class="">Nama Belakang</label>
-                                        <input type="text" class="form-control" id="inLName" placeholder="Doe">
+                                        <input type="text" class="form-control" id="inLName" placeholder="" required>
+                                        <div class="invalid-feedback">
+                                            Mohon Isi Nama Belakang
+                                        </div>
                                     </div>
                                     <div class="form-group col-md-3">
                                         <label for="inBDate">Tanggal Lahir</label>
-                                        <input type="date" class="form-control" id="inBDate">
+                                        <input type="date" class="form-control" id="inBDate" required>
                                         <span class="input-group-append"></span>
+                                        <div class="invalid-feedback">
+                                            Mohon Isi Tanggal Lahir
+                                        </div>
                                     </div>
                                     <div class="form-group col-md-3">
-                                        <label for="inGender">Kelamin</label>
-                                        <select class="form-control" id="inGender">
-                                            <option>Male</option>
-                                            <option>Female</option>
+                                        <label for="inGender">Jenis Kelamin</label>
+                                        <select class="form-control" id="inGender" required>
+                                            <option value="0">Male</option>
+                                            <option value="1">Female</option>
                                         </select>
                                         <div class="invalid-feedback">
                                             Mohon Isi Jenis Kelamin
@@ -181,11 +200,17 @@
                                 <div class="form-row mb-4">
                                     <div class="form-group col-md-6">
                                         <label for="inAddress">Alamat</label>
-                                        <input type="text" class="form-control" id="inAddress" placeholder="Jl. Menuju Grade A">
+                                        <input type="text" class="form-control" id="inAddress" placeholder="" required>
+                                        <div class="invalid-feedback">
+                                            Mohon Isi Alamat
+                                        </div>
                                     </div>
                                     <div class="form-group col-md-6">
                                         <label for="inPhone">Nomor Handphone</label>
-                                        <input type="text" class="form-control" id="inPhone" placeholder="081974658394">
+                                        <input type="text" class="form-control" id="inPhone" placeholder="" required>
+                                        <div class="invalid-feedback">
+                                            Mohon Isi No Handphone
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="form-row mb-3">
@@ -198,14 +223,14 @@
                                     </div>
                                     <div class="form-group col-md-6">
                                         <label for="inUniv">Universitas</label>
-                                        <select id="inUniv" class="form-control">
+                                        <select id="inUniv" class="form-control" required>
                                         </select>
                                         <div class="invalid-feedback">
                                             Mohon Isi Universitas
                                         </div>
                                     </div>
                                 </div>
-                                <button type="submit" class="btn btn-primary btn-lg btn-block mt-1 mb-4 font-weight-bold">Register</button>
+                                <button type="submit" id="buttonRegisterAccount" class="btn btn-primary btn-lg btn-block mt-1 mb-4 font-weight-bold">Register</button>
                             </form>
                         </div>
                     </div>
@@ -213,6 +238,7 @@
             </div>
         </div>
 
+        <!-- Form Forgot Password -->
         <div class="modal fade" id="forgotPass1Modal">
             <div class="modal-dialog modal-dialog-centered" role="document" style="width: 22rem;">
                 <div class="modal-content">
