--- a/Client/Views/Dashboard/Index.cshtml
+++ b/Client/Views/Dashboard/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Http
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -10,6 +12,11 @@
     <div class="ml-3">
         <h3>Selamat datang (Nama Lengkap)!</h3>
         <p>Selamat belajar dan bereksplorasi.</p>
+        <p id="sessionEmail" hidden>@HttpContextAccessor.HttpContext.Session.GetString("email")</p>     
+        <script>
+            let sessionEmail = document.getElementById("sessionEmail").innerHTML;
+            console.log(sessionEmail);
+        </script>
     </div>
 </div>
 
