--- a/Client/Views/Certificate/Index.cshtml
+++ b/Client/Views/Certificate/Index.cshtml
@@ -10,9 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/cerfiticate.css" />
-    <title>Hello, world!</title>
 </head>
 <body>
     <div class="container pm-certificate-container">
@@ -20,88 +19,45 @@
         <div class="inner-border"></div>
 
         <div class="pm-certificate-border col-xs-12">
-            <div class="row pm-certificate-header">
-                <div class="pm-certificate-title cursive col-xs-12 text-center">
-                    <h2>Buffalo Public Schools Certificate of Completion</h2>
+            <div class="pm-canvas-text">
+                <div class="center-text">
+                    <div class="setting-tittle">Certificate of Completion</div>
+                    <div class="class-name" id="class-name">Class Name</div>
+                    <div class="setting-code" id="cert-code">This Code Sertif</div>
+
+                    <hr class="line-bg">
+                    <br></br>
+                    <div class="student-name" id="user-name">Example Name Participan</div>
+                    <hr class="line-name">
+                    <p class="class-desc"> Thanks for being participant of course and growed your skill.</p>
                 </div>
-            </div>
+                <p class=""></p>
 
-            <div class="row pm-certificate-body">
 
-                <div class="pm-certificate-block">
-                    <div class="col-xs-12">
-                        <div class="row">
-                            <div class="col-xs-2"><!-- LEAVE EMPTY --></div>
-                            <div class="pm-certificate-name underline margin-0 col-xs-8 text-center">
-                                <span class="pm-name-text bold">TrueNorth Administrator</span>
+                <div class="row">
+
+                    <div class="col" style="position : relative;">
+                        <footer class="main-footer">
+                            <div class="footer-style">
+                                #Participan <strong><a href="https://localhost:44329/">Academy</a>.</strong> All rights reserved.
                             </div>
-                            <div class="col-xs-2"><!-- LEAVE EMPTY --></div>
-                        </div>
+                        </footer>
                     </div>
 
-                    <div class="col-xs-12">
-                        <div class="row">
-                            <div class="col-xs-2"><!-- LEAVE EMPTY --></div>
-                            <div class="pm-earned col-xs-8 text-center">
-                                <span class="pm-earned-text padding-0 block cursive">has earned</span>
-                                <span class="pm-credits-text block bold sans">PD175: 1.0 Credit Hours</span>
-                            </div>
-                            <div class="col-xs-2"><!-- LEAVE EMPTY --></div>
-                            <div class="col-xs-12"></div>
-                        </div>
+
+                    <div class="col" style="position : relative;">
+                        <center>
+                            <img class="ttd2" src="https://drive.google.com/uc?export=view&id=1PRI-khOq2Toj1M0KBl-B8NCK1e2GxVe7" alt="" width="80" height="80">
+                            <div class="ttd">Academy Company</div>
+                        </center>
                     </div>
 
-                    <div class="col-xs-12">
-                        <div class="row">
-                            <div class="col-xs-2"><!-- LEAVE EMPTY --></div>
-                            <div class="pm-course-title col-xs-8 text-center">
-                                <span class="pm-earned-text block cursive">while completing the training course entitled</span>
-                            </div>
-                            <div class="col-xs-2"><!-- LEAVE EMPTY --></div>
-                        </div>
-                    </div>
-
-                    <div class="col-xs-12">
-                        <div class="row">
-                            <div class="col-xs-2"><!-- LEAVE EMPTY --></div>
-                            <div class="pm-course-title underline col-xs-8 text-center">
-                                <span class="pm-credits-text block bold sans">BPS PGS Initial PLO for Principals at Cluster Meetings</span>
-                            </div>
-                            <div class="col-xs-2"><!-- LEAVE EMPTY --></div>
-                        </div>
-                    </div>
                 </div>
-
-                <div class="col-xs-12">
-                    <div class="row">
-                        <div class="pm-certificate-footer">
-                            <div class="col-xs-4 pm-certified col-xs-4 text-center">
-                                <span class="pm-credits-text block sans">Buffalo City School District</span>
-                                <span class="pm-empty-space block underline"></span>
-                                <span class="bold block">Crystal Benton Instructional Specialist II, Staff Development</span>
-                            </div>
-                            <div class="col-xs-4">
-                                <!-- LEAVE EMPTY -->
-                            </div>
-                            <div class="col-xs-4 pm-certified col-xs-4 text-center">
-                                <span class="pm-credits-text block sans">Date Completed</span>
-                                <span class="pm-empty-space block underline"></span>
-                                <span class="bold block">DOB: </span>
-                                <span class="bold block">Social Security # (last 4 digits)</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
 
         </div>
     </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="~/js/site.js"></script>
 </body>
 </html>
