Merapikan Button dengan SweetAlert dan Button Next Chapter

--- a/Client/Views/Class/Details.cshtml
+++ b/Client/Views/Class/Details.cshtml
@@ -32,7 +32,7 @@
             },
             data: JSON.stringify(
                 {
-                    "Email": "dennyfpr@gmail.com",
+                    "Email": sesEmail,
                     "Class_Id": classId
                 }),
             async: false
