--- a/Client/Views/Shared/_Layout.cshtml
+++ b/Client/Views/Shared/_Layout.cshtml
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="http://fonts.cdnfonts.com/css/montblanc">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/user.css" />
     <script type="text/javascript" src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="SB-Mid-client-cyFXZtmM2vBT9TVs"></script>
 </head>
-<body class="bg-light">
+<body class="bg-light" style="background-image: url('https://img.freepik.com/free-vector/white-abstract-wallpaper_23-2148830026.jpg?w=2000'); ">
     @* Header *@
     <header>
         @* Navbar *@
@@ -52,23 +52,23 @@
     <p id="sessionEmail" hidden>@HttpContextAccessor.HttpContext.Session.GetString("email")</p>
     <script>
         let sesEmail = document.getElementById("sessionEmail").innerHTML;
-        console.log(sesEmail); 
+        console.log(sesEmail);
     </script>
 
     @* Footer *@
-    <footer class="border-top text-muted mt-5 pt-3 pb-3 invisible">
+    <footer class="border-top text-muted mt-2 pt-3 pb-3 invisible">
         <div class="container-fluid">
             <span class="ml-5">&copy; 2022 - Codemy - MCC Project</span>
         </div>
     </footer>
 
-    <footer class="footer border-top text-muted mt-5">
+    <footer class="footer text-muted mt-5">
         <div class="container-fluid">
-            <span class="ml-5">&copy; 2022 - Codemy - MCC Project</span>
+            <span class="ml-5" style="font-size: 12px;">&copy; 2022 - Codemy - MCC Project</span>
         </div>
     </footer>
 
-    <!-- Login -->
+    <!-- Login/Register/ForgotPass -->
     <div id="navModal">
         <div class="modal fade" id="loginModal">
             <div class="modal-dialog modal-dialog-centered" role="document" style="width: 22rem;">
@@ -264,8 +264,8 @@
                                     <label class="mb-3" style="text-align:justify" for="LogEmailFP1">Masukan Email kamu yang telah terdaftar di Codemy agar kami bisa mengirim kode OTP!</label>
                                     <input type="email" class="form-control" id="LogEmailFP1" placeholder="emailkamu@disini.com">
                                 </div>
-                                    <button type="button" class="btn btn-primary btn-lg btn-block mt-4 mb-4 font-weight-bold" id="buttonSendOTP">Send OTP</button>
-                                    <button type="button" class="btn btn-primary btn-lg btn-block mt-4 mb-4 font-weight-bold" hidden id="buttonSendOTP1" data-target="#forgotPass2Modal" data-toggle="modal" data-dismiss="modal">Send OTP</button>
+                                <button type="button" class="btn btn-primary btn-lg btn-block mt-4 mb-4 font-weight-bold" id="buttonSendOTP">Send OTP</button>
+                                <button type="button" class="btn btn-primary btn-lg btn-block mt-4 mb-4 font-weight-bold" hidden id="buttonSendOTP1" data-target="#forgotPass2Modal" data-toggle="modal" data-dismiss="modal">Send OTP</button>
                             </form>
                         </div>
                     </div>
