Beautify and Landing Page

--- a/Client/Views/Account/Index.cshtml
+++ b/Client/Views/Account/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Index";
 }
 
-<div class="container">
+<div class="container mt-5">
     <div class="card mb-5">
         <div class="card-body">
             <h4>User Profile</h4>
@@ -46,17 +46,6 @@
                     </div>
                     <div class="row">
                         <div class="form-group col">
-                            <label for="InputDg">Major</label>
-                            <input type="text" class="form-control" id="InputMajor" aria-describedby="inputMajor" placeholder="cth: Teknik Informatika" required>
-                        </div>
-                        <div class="form-group col">
-                            <label for="InputUn">Universitas</label>
-                            <select class="custom-select mr-sm-2" id="InputUn" required>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="form-group col">
                             <label for="InputProvince">Province</label>
                             <select class="custom-select mr-sm-2" id="InputProvince" required>
                             </select>
@@ -81,6 +70,17 @@
                         <div class="form-group col">
                             <label for="InputUn">Street</label>
                             <input type="text" class="form-control" id="InputStreet" aria-describedby="inputStreet" placeholder="cth: Jl. Merdeka" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col">
+                            <label for="InputDg">Major</label>
+                            <input type="text" class="form-control" id="InputMajor" aria-describedby="inputMajor" placeholder="cth: Teknik Informatika" required>
+                        </div>
+                        <div class="form-group col">
+                            <label for="InputUn">Universitas</label>
+                            <select class="custom-select mr-sm-2" id="InputUn" required>
+                            </select>
                         </div>
                     </div>
                     <br />
