Certificate n Fixing Bugs

--- a/Client/Views/Class/Details.cshtml
+++ b/Client/Views/Class/Details.cshtml
@@ -8,6 +8,9 @@
 
 <script>
     let classId = @(ViewBag.ClassId);
+    @*let strTest = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(ViewBag.strTest))*@
+    console.log(classId);
+    /*console.log(strTest[0]);*/
 </script>
 
 <div id="classDetail">
