--- a/Client/Views/Certificate/Index.cshtml
+++ b/Client/Views/Certificate/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
     Layout = null;
 }
-
-<!doctype html>
+@using Microsoft.AspNetCore.Http
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <!-- Required meta tags -->
@@ -12,10 +13,18 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/cerfiticate.css" />
-    
+
     <title>Hello, world!</title>
 </head>
 <body>
+    <!-- Ambil sesi login (Biar Tidak Error) -->
+    <p id="sessionEmail" hidden>@HttpContextAccessor.HttpContext.Session.GetString("email")</p>
+    <script>
+        let sesEmail = document.getElementById("sessionEmail").innerHTML;
+        let certEmail = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(ViewBag.certEmail1));
+        console.log(certEmail[0]);
+    </script>
+
     <div class="container pm-certificate-container">
         <div class="outer-border"></div>
         <div class="inner-border"></div>
@@ -106,6 +115,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/certificate.js" asp-append-version="true"></script>
 </body>
 </html>
