--- a/Client/Views/ClassAdmin/CreateClass.cshtml
+++ b/Client/Views/ClassAdmin/CreateClass.cshtml
@@ -13,7 +13,8 @@
     </head>
     <body>
         <content>
-            <form class="canvas shadow needs-validation" onsubmit="return false" novalidate id="formClass">
+            @*<form class="canvas shadow" id="formClass">*@
+            <form class="canvas shadow needs-validation" onsubmit="return false" id="formClass">
 
                 <div class="form-group">
                     <label for="tittleCls">Tittle Class</label>
