--- a/Client/Views/ClassAdmin/InputContent.cshtml
+++ b/Client/Views/ClassAdmin/InputContent.cshtml
@@ -34,7 +34,7 @@
 
                 <div class="form-group">
                     <label for="content">Content (Video Code)</label>
-                    <input type="text" name="title" class="form-control" placeholder="Input Code Video" id="link-video">
+                    <input type="text" name="content" class="form-control" placeholder="Input Code Video" id="link-video">
                 </div>
 
                 <div class="modal-footer">
